Added required gems & setup rubocop

--- a/control-plane/Gemfile
+++ b/control-plane/Gemfile
@@ -1,48 +1,69 @@
+# frozen_string_literal: true
+
 source "https://rubygems.org"
 
 ruby "3.2.0"
 
-# Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
-gem "rails", "~> 7.1.1"
+# Core
+gem "aasm"
+gem "annotate"
+gem "aws-sdk"
+gem "pg", "~> 1.1"       # PostgreSQL Database
+gem "puma", ">= 5.0"     # Web server
+gem "rails", "~> 7.1.1"  # Core Rails gem
 
-# Use postgresql as the database for Active Record
-gem "pg", "~> 1.1"
+# API Support
+gem "jbuilder"
+gem "jwt"
+gem "rack-cors"
+gem "rswag"
 
-# Use the Puma web server [https://github.com/puma/puma]
-gem "puma", ">= 5.0"
+# AuthN & AuthZ
+gem "devise"
+gem "devise-jwt"
 
-# Build JSON APIs with ease [https://github.com/rails/jbuilder]
-# gem "jbuilder"
+# Utilities
+gem "bootsnap", require: false # Reduces boot time
+gem "tzinfo-data", platforms: %i[windows jruby] # Timezone data
 
-# Use Redis adapter to run Action Cable in production
-# gem "redis", ">= 4.0.1"
-
-# Use Kredis to get higher-level data types in Redis [https://github.com/rails/kredis]
-# gem "kredis"
-
-# Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
-# gem "bcrypt", "~> 3.1.7"
-
-# Windows does not include zoneinfo files, so bundle the tzinfo-data gem
-gem "tzinfo-data", platforms: %i[ windows jruby ]
-
-# Reduces boot times through caching; required in config/boot.rb
-gem "bootsnap", require: false
-
-# Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
-# gem "image_processing", "~> 1.2"
-
-# Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin Ajax possible
-# gem "rack-cors"
-
+# Debugging
 group :development, :test do
-  # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
-  gem "debug", platforms: %i[ mri windows ]
+  gem "debug", platforms: %i[mri windows] # Debugging tool
+  gem "factory_bot_rails"
+  gem "faker"
+  gem "rspec-rails"
 end
 
+# Development Environment
 group :development do
-  # Speed up commands on slow machines / big apps [https://github.com/rails/spring]
-  # gem "spring"
-
+  # Add development-only gems here. For example:
+  # gem "spring"  # Speeds up Rails commands
+  gem "awesome_print"
+  gem "rubocop", require: false
+  gem "rubocop-performance", require: false
+  gem "rubocop-rails", require: false
 end
 
+# Production Environment
+group :production do
+  # Add production-only gems here.
+  gem "redis", "~> 4.0"
+end
+
+# API Serialization & Pagination
+# Uncomment as needed:
+# gem "fast_jsonapi"  # Efficient JSON serialization
+# gem "kaminari"      # Pagination
+
+# Authentication & Authorization
+# Uncomment as needed:
+# gem "devise"        # Authentication
+# gem "devise-jwt"    # JWT for API
+# gem "cancancan"     # Authorization
+
+# Optional Enhancements
+# Uncomment as needed:
+# gem "rack-cors"     # CORS handling
+# gem "image_processing", "~> 1.2"  # For image variants if you decide to use Active Storage
+
+# NOTE: Removed unused or commented-out gems for better readability.
