--- a/control-plane/config/database.yml
+++ b/control-plane/config/database.yml
@@ -1,6 +1,9 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  host: <%= ENV['DB_HOST'] %>
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
@@ -14,5 +17,3 @@ test:
 production:
   <<: *default
   database: control_plane_production
-  username: your_username
-  password: <%= ENV['CONTROL_PLANE_DATABASE_PASSWORD'] %>
