Separating Docker files based on environment.

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -7,11 +7,11 @@ FROM registry.docker.com/library/ruby:$RUBY_VERSION-slim as base
 # Rails app lives here
 WORKDIR /rails
 
-# Set environment variables for production
-ENV BUNDLE_DEPLOYMENT=1
-ENV BUNDLE_WITHOUT=development
+# Set environment variables for development
+ENV BUNDLE_DEPLOYMENT=0
+ENV BUNDLE_WITHOUT=''
 ENV BUNDLE_PATH=/usr/local/bundle
-ENV RAILS_ENV=production
+ENV RAILS_ENV=development
 
 # Throw-away build stage to reduce size of final image
 FROM base as build
