--- a/config/database.yml
+++ b/config/database.yml
@@ -1,19 +1,25 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: <%= ENV['DB_HOST'] %>
-  username: <%= ENV['DB_USERNAME'] %>
-  password: <%= ENV['DB_PASSWORD'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
+  host: db  # This should be the service name specified in your docker-compose.yml for PostgreSQL
+  username: multiwoven  # Matches your Docker setup
+  password: password  # Matches your Docker setup
   database: control_plane_development
 
 test:
   <<: *default
+  host: <%= ENV['DB_HOST'] %>
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
   database: control_plane_test
 
 production:
   <<: *default
+  host: <%= ENV['DB_HOST'] %>  # Here you can use environment variables like RDS_HOSTNAME for AWS RDS
+  username: <%= ENV['DB_USERNAME'] %>  # RDS_USERNAME
+  password: <%= ENV['DB_PASSWORD'] %>  # RDS_PASSWORD
   database: control_plane_production
