--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -15,7 +15,9 @@ services:
       - redis-data:/data
 
   control-plane:
-    image: your-remote-repo/control-plane:dev  # Use the dev tag here
+    build:
+      context: ./control-plane  # Points to the service directory
+      dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
     depends_on:
@@ -23,11 +25,11 @@ services:
       - redis
     environment:
       RAILS_ENV: development
-      RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
-      REDIS_URL: redis://redis:6379/0
       DB_HOST: db
       DB_USERNAME: multiwoven
       DB_PASSWORD: password
+      
+  # Other services like data-plane, frontend-ui can be added here
 
 volumes:
   pg-data:
