--- a/config/database.yml
+++ b/config/database.yml
@@ -5,6 +5,9 @@ default: &default
 
 development:
   <<: *default
+  host: db # This should be the service name specified in your docker-compose.yml for PostgreSQL
+  username: multiwoven # Matches your Docker setup
+  password: password # Matches your Docker setup
   database: control_plane_development
 
 test:
