--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Rails CI
+name: Rails CI and ECR Push
 
 on:
   push:
@@ -6,8 +6,14 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  AWS_REGION: us-east-1
+  ECR_REGISTRY: 253707965345.dkr.ecr.us-east-1.amazonaws.com
+  ECR_REPOSITORY: control-plane
+  IMAGE_TAG: latest
+
 jobs:
-  build:
+  build_and_push:
     runs-on: ubuntu-latest
 
     services:
@@ -27,6 +33,8 @@ jobs:
       DB_HOST: localhost
       DB_USERNAME: postgres
       DB_PASSWORD: postgres
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     steps:
     - name: Checkout Code
@@ -55,3 +63,18 @@ jobs:
       run: |
         ./cc-test-reporter before-build
         ./cc-test-reporter after-build --exit-code $?
+
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
+
+    - name: Login to ECR
+      run: $(aws ecr get-login --no-include-email --region ${{ env.AWS_REGION }})
+
+    - name: Build and Push Docker image
+      run: |
+        docker build -t ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} .
+        docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
