--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
-    "styled-components": "^6.1.1"
+    "rollup": "^4.9.1",
+    "styled-components": "^6.1.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
