--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "type-check": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "type-check": "vite",
     "preview": "vite preview",
     "cypress:open": "cypress open",
-    "test": "cypress run"
+    "test": "npm run dev & wait-on http://127.0.0.1:8000 && cypress run"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
@@ -37,6 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "wait-on": "^7.2.0"
   }
 }
