--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "@emotion/styled": "^11.11.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6",
+    "react-router-dom": "^6.21.1",
     "rollup": "^4.9.1",
     "styled-components": "^6.1.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
