--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,17 +27,16 @@ jobs:
     # - name: Type Check
     #   run: npm run type-check
 
-    - name: Run Tests
-      run: npm test -- --coverage --coverageReporters=lcov
+    - name: Run tests and generate coverage
+      run: npm run test
 
     - name: Upload coverage to Code Climate
-      env:
-        CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
       run: |
         curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
         chmod +x ./cc-test-reporter
         ./cc-test-reporter before-build
-        ./cc-test-reporter after-build --exit-code ${{ job.status }} --coverage-input-type lcov
-
+        ./cc-test-reporter after-build -t lcov --exit-code ${{ github.event_name == 'pull_request' && github.event.pull_request.merged == false && 0 || 1 }}
+      env:
+        CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
     - name: Build
       run: npm run build
