--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,9 @@ jobs:
         curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
         chmod +x ./cc-test-reporter
         ./cc-test-reporter before-build
-        ./cc-test-reporter after-build --exit-code $?
+        if [ -f coverage/lcov.info ]; then
+          ./cc-test-reporter after-build --exit-code $? --coverage-input-type lcov
+        else
+          echo "Coverage report not found."
+        fi
+
