--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "wait-on": "^7.2.0"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": ["lcov", "text"]
   }
 }
