sidebar and login validation error fixes

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "npm run dev & wait-on http://localhost:8000 && cypress run"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
