--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.1.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "js-cookie": "^3.0.5",
