--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.21.1",
     "rollup": "^4.9.1",
     "styled-components": "^6.1.1",
+    "toastr": "^2.1.4",
     "yup": "^1.3.3"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/toastr": "^2.1.43",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "@vitejs/plugin-react": "^4.2.1",
