--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.6",
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.11",
     "@types/js-cookie": "^3.0.6",
