--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.1.1",
+    "@rjsf/chakra-ui": "^5.16.1",
+    "@rjsf/core": "^5.16.1",
+    "@rjsf/utils": "^5.16.1",
+    "@rjsf/validator-ajv8": "^5.16.1",
     "@tanstack/react-query": "^5.17.14",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
