--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@rjsf/utils": "^5.16.1",
     "@rjsf/validator-ajv8": "^5.16.1",
     "@tanstack/react-query": "^5.17.14",
+    "@tanstack/react-query-devtools": "^5.17.18",
+    "chakra-react-select": "^4.7.6",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "jest-environment-jsdom": "^29.7.0",
