--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,12 @@
 [submodule "integrations"]
 	path = integrations
 	url = git@github.com:Multiwoven/multiwoven-integrations.git
+[submodule "multiwoven-server"]
+	path = multiwoven-server
+	url = git@github.com:Multiwoven/multiwoven-server.git
+[submodule "multiwoven-ui"]
+	path = multiwoven-ui
+	url = git@github.com:Multiwoven/multiwoven-ui.git
+[submodule "multiwoven-integrations"]
+	path = multiwoven-integrations
+	url = git@github.com:Multiwoven/multiwoven-integrations.git
