--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,35 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
+# Testing
 /coverage
 
-# production
-/build
-/dist
+# Node modules and dependencies
+/node_modules/
 
-# misc
-.DS_Store
+# Build output
+/dist/
+/build/
+/.vite/
+
+# Environment files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.DS_Store
 
+# Editor directories and files
+.vscode/
+*.swp
+*.swo
+
+# Operating system files
+.DS_Store
+Thumbs.db
+
+# Optional: Log files
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
