--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^10.16.16",
     "jest-environment-jsdom": "^29.7.0",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
