--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
+# Rails 
+# ----------------------
+RAILS_ENV=development
+
 # Database Configuration
 # ----------------------
 DB_HOST=db
 DB_USERNAME=multiwoven
 DB_PASSWORD=password
+REDIS_URL=redis://redis:6379/0
 
 # SMTP Configuration for Email
 # ----------------------------
@@ -15,3 +20,32 @@ SMTP_PASSWORD=yourpassword
 # New Relic Configuration
 # -----------------------
 NEW_RELIC_KEY=yourkey
+
+# Temporal
+# ----------------------------
+TEMPORAL_VERSION=1.22.4
+TEMPORAL_UI_VERSION=2.21.0
+TEMPORAL_HOST=temporal
+TEMPORAL_PORT=7233
+TEMPORAL_ROOT_CERT=/certs/temporal.pem
+TEMPORAL_CLIENT_KEY=/certs/temporal.key
+TEMPORAL_CLIENT_CHAIN=/certs/temporal.chain.pem
+
+TEMPORAL_POSTGRESQL_VERSION=13
+TEMPORAL_POSTGRES_PASSWORD=temporal
+TEMPORAL_POSTGRES_USER=temporal
+TEMPORAL_POSTGRES_DEFAULT_PORT=5432
+
+TEMPORAL_NAMESPACE=multiwoven-dev
+TEMPORAL_TASK_QUEUE=sync-dev
+
+TEMPORAL_ACTIVITY_THREAD_POOL_SIZE=20
+TEMPORAL_WORKFLOW_THREAD_POOL_SIZE=10
+
+# Sync
+# ----------------------------
+SYNC_EXTRACTOR_BATCH_SIZE=1000
+SYNC_LOADER_BATCH_SIZE=1000
+
+SYNC_EXTRACTOR_THREAD_POOL_SIZE=10
+SYNC_LOADER_THREAD_POOL_SIZE=10
