--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 version: '3'
-
+include:
+  - temporal-docker-compose.yml
 services:
   db:
     image: postgres:latest
@@ -7,35 +8,42 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USERNAME}
     volumes:
-      - pg-data:/var/lib/postgresql/data
+      - mw-pg-data:/var/lib/postgresql/data
 
   redis:
     image: redis:latest
     volumes:
-      - redis-data:/data
+      - mw-redis-data:/data
 
   multiwoven-server:
     build:
       context: ./multiwoven-server
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
     depends_on:
       - db
       - redis
-    environment:
-      RAILS_ENV: production
-      REDIS_URL: redis://redis:6379/0
-      DB_HOST: ${DB_HOST}
-      DB_USERNAME: ${DB_USERNAME}
-      DB_PASSWORD: ${DB_PASSWORD}
-      SMTP_ADDRESS: ${SMTP_ADDRESS}
-      SMTP_USERNAME: ${SMTP_USERNAME}
-      SMTP_PASSWORD: ${SMTP_PASSWORD}
-      NEW_RELIC_KEY: ${NEW_RELIC_KEY}
+      - temporal
+    env_file: .env
     volumes:
       - ./multiwoven-server:/rails
+    stdin_open: true
+    tty: true
+
+  multiwoven-worker:
+    build:
+      context: ./multiwoven-server
+      dockerfile: Dockerfile.dev
+    depends_on:
+      - db
+      - redis
+      - temporal
+    env_file: .env
+    volumes:
+      - ./multiwoven-server:/rails
+    command: sh -c "./app/temporal/cli/register_namespace && ./app/temporal/cli/worker"
 
 volumes:
-  pg-data:
-  redis-data:
+  mw-pg-data:
+  mw-redis-data:
