--- a/package.json
+++ b/package.json
@@ -21,25 +21,17 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource-variable/manrope": "^5.0.18",
     "@heroicons/react": "^2.1.1",
-    "@monaco-editor/react": "^4.6.0",
-    "@rjsf/chakra-ui": "^5.16.1",
-    "@rjsf/core": "^5.16.1",
-    "@rjsf/utils": "^5.16.1",
-    "@rjsf/validator-ajv8": "^5.16.1",
-    "@tanstack/react-query": "^5.17.14",
-    "@tanstack/react-query-devtools": "^5.17.18",
-    "chakra-react-select": "^4.7.6",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "jest-environment-jsdom": "^29.7.0",
     "js-cookie": "^3.0.5",
-    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "rollup": "^4.9.1",
     "styled-components": "^6.1.1",
+    "toastr": "^2.1.4",
     "yup": "^1.3.3"
   },
   "devDependencies": {
