Revert "fixed merge conflicts"
This reverts commit 3c2af0699ab1f1b8f2c9639f0e10273824eafbc0.

--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,13 @@
 # Testing
 /coverage
 
-# production
-/build
-/dist
+# Node modules and dependencies
+/node_modules/
 
 # Build output
 /dist/
 /build/
 /.vite/
-
 
 # Environment files
 .env
@@ -35,6 +33,3 @@ Thumbs.db
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-
-/node_modules
