fix: snowflake odbc (#43)
* fix: snowflake odbc

* Add unixodbc via apt-get

* Remove unwanted code

* update production dockerfile

* Add snowflake driver path to env

* Update integrations gem

--- a/.env
+++ b/.env
@@ -26,6 +26,11 @@ SMTP_PASSWORD=yourpassword
 # -----------------------
 NEW_RELIC_KEY=yourkey
 
+
+# Connectors
+# ----------------------------
+SNOWFLAKE_DRIVER_PATH=/usr/lib/snowflake/odbc/lib/libSnowflake.so
+
 # Temporal
 # ----------------------------
 TEMPORAL_VERSION=1.22.4
