--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,8 +1,10 @@
 # syntax = docker/dockerfile:1
 
 # Make sure RUBY_VERSION matches the Ruby version in .ruby-version and Gemfile
+
 ARG RUBY_VERSION=3.2.0
 FROM registry.docker.com/library/ruby:$RUBY_VERSION-slim as base
+
 
 WORKDIR /rails
 
@@ -14,7 +16,6 @@ ENV RAILS_ENV=development
 
 # Throw-away build stage to reduce size of final image
 FROM base as build
-
 # Install packages needed for building, including Libtool
 RUN apt-get update -qq && \
     apt-get install --no-install-recommends -y build-essential autoconf automake libtool git libpq-dev libvips pkg-config m4 perl libltdl-dev
@@ -35,20 +36,26 @@ RUN ./configure && \
     make && \
     make install
 
-# # Navigate to the directory of the component you want to build
-WORKDIR /multiwoven-dependencies/libiodbc-3.52.10
+# Install iodbc
+RUN apt-get update -qq && \
+    apt-get install -y libiodbc2 && \
+    rm -rf /var/lib/apt/lists/*
 
-# Run autoreconf
-RUN autoreconf -f -i
+# Hack for snowflake odbc driver
+RUN apt-get update -qq && \
+    apt-get install -y unixodbc && \
+    rm -rf /var/lib/apt/lists/*
 
-# Run configure and make install
-RUN ./configure && \
-    make && \
-    make install
+RUN apt-get update -qq && \
+    apt-get install -y --no-install-recommends wget && \
+    rm -rf /var/lib/apt/lists/*
+
 
 # Install the Snowflake ODBC driver
-RUN wget https://sfc-repo.snowflakecomputing.com/odbc/linux/latest/snowflake-odbc-3.1.4.x86_64.deb -O snowflake-odbc.deb && \
-    dpkg -i snowflake-odbc.deb || apt-get install -f
+ENV LD_LIBRARY_PATH=/usr/local/lib:${LD_LIBRARY_PATH}
+RUN wget https://sfc-repo.snowflakecomputing.com/odbc/linuxaarch64/3.2.0/snowflake-odbc-3.2.0.aarch64.deb -O snowflake-odbc.deb && \
+    dpkg -i snowflake-odbc.deb || apt-get -y -f install
+
 
 # Change back to the root directory before copying the Rails app
 # Rails app lives here
@@ -66,18 +73,10 @@ COPY . .
 # Precompile bootsnap code for faster boot times
 RUN bundle exec bootsnap precompile app/ lib/
 
-# Final stage for app image
-FROM base
-
 # Install packages needed for deployment
 RUN apt-get update -qq && \
     apt-get install --no-install-recommends -y curl libvips postgresql-client && \
     rm -rf /var/lib/apt/lists /var/cache/apt/archives
-
-# Copy built artifacts: gems, application
-COPY --from=build /usr/local/lib /usr/local/lib
-COPY --from=build /usr/local/bundle /usr/local/bundle
-COPY --from=build /rails /rails
 
 # Create the required directories and Run and own only the runtime files as a non-root user for security
 RUN useradd rails --create-home --shell /bin/bash && \
