--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@rjsf/validator-ajv8": "^5.16.1",
     "@tanstack/react-query": "^5.17.14",
     "@tanstack/react-query-devtools": "^5.17.18",
+    "@testing-library/user-event": "^14.5.2",
     "chakra-react-select": "^4.7.6",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
