--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,35 +7,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '18'
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "18"
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    # - name: Run linting
-    #   run: npm run lint
+      - name: Run tests and collect coverage
+        run: npm test -- --coverage
 
-    # - name: Run TypeScript type-check
-    #   run: npm run type-check
-
-    - name: Run tests and collect coverage
-      run: npm test -- --coverage
-
-    - name: Upload coverage to Code Climate
-      env:
-        CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-      run: |
-        curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-        chmod +x ./cc-test-reporter
-        ./cc-test-reporter before-build
-        if [ -f coverage/lcov.info ]; then
-          ./cc-test-reporter after-build --exit-code $? --coverage-input-type lcov
-        else
-          echo "Coverage report not found."
-        fi
-
+      - name: Upload coverage to Code Climate
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        run: |
+          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+          chmod +x ./cc-test-reporter
+          ./cc-test-reporter before-build
+          if [ -f coverage/lcov.info ]; then
+            ./cc-test-reporter after-build --exit-code $? --coverage-input-type lcov
+          else
+            echo "Coverage report not found."
+          fi
