--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,7 +1,12 @@
 name: Validate Workflow
 
-on: [push, pull_request]
-
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - develop
 jobs:
   build:
     runs-on: ubuntu-latest
