Add release token (#56)
* Add gem version badge

* Add multiwoven integrations read me

* Add multiwoven header

* Update README.md

* feat: Automate gem release via github action

* Add release token

---------

Co-authored-by: Nagendra Dhanakeerthi <nagendra.dhanakeerthi@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: GoogleCloudPlatform/release-please-action@v2
         id: release
         with:
+          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
           release-type: ruby
           package-name: multiwoven-integrations
           bump-minor-pre-major: true
