--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
       # Bundle install
       - run: bundle install
         if: ${{ steps.release.outputs.release_created }}
-      # Publish
+      # Publish gem to ruby gems
       - name: publish gem
         run: |
           mkdir -p $HOME/.gem
